--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,12 @@ repositories {
     }
 }
 dependencies {
-    compile 'com.github.hyleung:ratpack-zipkin:2.0.0'
+    compile 'com.github.hyleung:ratpack-zipkin:2.1.0'
     compile 'io.ratpack:ratpack-guice:1.4.1'
     compile 'org.slf4j:slf4j-api:1.7.13'
-    compile 'io.zipkin.brave:brave-spancollector-scribe:4.3.3'
-    compile 'io.zipkin.brave:brave-spancollector-kafka:4.3.3'
-    compile 'io.zipkin.reporter:zipkin-sender-libthrift:0.10.0'
-    compile 'io.zipkin.reporter:zipkin-sender-kafka08:0.10.0'
+    compile 'io.zipkin.reporter:zipkin-sender-libthrift:1.1.2'
+    compile 'io.zipkin.reporter:zipkin-sender-kafka10:1.1.2'
+    compile 'io.zipkin.reporter:zipkin-sender-okhttp3:1.1.2'
     runtime 'ch.qos.logback:logback-core:1.1.7'
     runtime 'ch.qos.logback:logback-classic:1.1.7'
 }
