--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.github.hyleung:ratpack-zipkin:2.1.1-SNAPSHOT'
     compile 'io.ratpack:ratpack-guice:1.4.1'
     compile 'org.slf4j:slf4j-api:1.7.13'
-    compile 'io.zipkin.reporter:zipkin-reporter:1.1.2'
+    //compile 'io.zipkin.reporter:zipkin-reporter:1.1.2'
     compile 'io.zipkin.reporter2:zipkin-sender-kafka11:2.1.3'
     compile 'io.zipkin.reporter2:zipkin-sender-okhttp3:2.1.3'
     runtime 'ch.qos.logback:logback-core:1.1.7'
