Updates to the latest versions

--- a/build.gradle
+++ b/build.gradle
@@ -18,17 +18,18 @@ run {
     systemProperties System.getProperties()
 }
 repositories {
+    mavenLocal()
     mavenCentral()
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots/"
     }
 }
 dependencies {
-    compile 'com.github.hyleung:ratpack-zipkin:2.3.0'
+    compile 'com.github.hyleung:ratpack-zipkin:2.3.1-SNAPSHOT'
     compile 'io.ratpack:ratpack-guice:1.4.1'
     compile 'org.slf4j:slf4j-api:1.7.13'
-    compile 'io.zipkin.reporter2:zipkin-sender-kafka11:2.3.0'
-    compile 'io.zipkin.reporter2:zipkin-sender-okhttp3:2.3.0'
+    compile 'io.zipkin.reporter2:zipkin-sender-kafka11:2.3.3'
+    compile 'io.zipkin.reporter2:zipkin-sender-okhttp3:2.3.3'
     runtime 'ch.qos.logback:logback-core:1.1.7'
     runtime 'ch.qos.logback:logback-classic:1.1.7'
 }
