--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
     }
 }
 dependencies {
-    compile 'com.github.hyleung:ratpack-zipkin:2.3.1-SNAPSHOT'
+    compile 'com.github.hyleung:ratpack-zipkin:2.3.1'
     compile 'io.ratpack:ratpack-guice:1.4.1'
     compile 'org.slf4j:slf4j-api:1.7.13'
     compile 'io.zipkin.reporter2:zipkin-sender-kafka11:2.3.3'
